k8s/geolapor-backend.yaml
# 2. Server PostGIS (Database)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geolapor-db
spec:
  selector:
    matchLabels:
      app: geolapor-db
  template:
    metadata:
      labels:
        app: geolapor-db
    spec:
      containers:
      - name: postgres
        image: postgis/postgis:15-3.3-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d/
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: postgis-pvc
      - name: init-script
        configMap:
          name: db-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: geolapor-db
spec:
  ports:
  - port: 5432
  selector:
    app: geolapor-db
---
# 3. Server Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geolapor-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geolapor-backend
  template:
    metadata:
      labels:
        app: geolapor-backend
    spec:
      containers:
      - name: backend
        image: agielf/geolapor-backend 
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: geolapor-backend-svc
spec:
  type: ClusterIP # <--- SUDAH DIUBAH KE CLUSTERIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: geolapor-backend
