k8s/geolapor-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geolapor-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geolapor-frontend
  template:
    metadata:
      labels:
        app: geolapor-frontend
    spec:
      containers:
      - name: frontend
        image: agielf/geolapor-frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: geolapor-frontend-svc
spec:
  type: ClusterIP # <--- SUDAH DIUBAH KE CLUSTERIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: geolapor-frontend
