k8s/geolapor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geolapor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - geolapor.duckdns.org # <--- SUDAH DISESUAIKAN
    secretName: geolapor-tls-secret
  rules:
  - host: geolapor.duckdns.org # <--- SUDAH DISESUAIKAN
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: geolapor-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geolapor-frontend-svc
            port:
              number: 80
